<resources>
    <string name="app_name">TravelPlanner</string>
    <string name="font_name">IropkeBatangM.ttf</string>
    <string name="google_android_api_key">AIzaSyAVP_0vf3IB8IVH3G7Ga38eH8KIeWhhw1E</string>
    <string name="google_http_api_key">AIzaSyBrc43xV_1kSDrzfX-Nl8_Um3wnZpYjOow</string>
    <string name="google_wep_clinet_api_key">39263848410-0agn4mmm9r4msjf7dtfmkos6c6gec812.apps.googleusercontent.com</string>
    <string name="server_base_addr">http://52.88.195.16:8080/travelPlanner/</string>
    <string name="login_failed">로그인에 실패했습니다. 앱 재실행 후 다시 시도해주십시오. 에러코드 </string>
    <string name="login_success">로그인 했습니다.</string>
    <string name="logout_success">로그아웃 했습니다.</string>
    <string name="txt_yes">예</string>
    <string name="txt_no">아니오</string>
    <string name="google_geocoding_base">https://maps.googleapis.com/maps/api/geocode/json?place_id=</string>
    <string name="google_http_searching_loc">https://maps.googleapis.com/maps/api/place/nearbysearch/json?location=</string>
    <string name="google_http_matrix_head">https://maps.googleapis.com/maps/api/distancematrix/json?</string>
    <string name="plan_detail_title">플랜 조회</string>
    <string name="alert_favorite">즐겨찾기로 등록하겠습니까?</string>
    <string name="alert_favorite_success">즐겨찾기로 등록되었습니다.</string>
    <string name="view_hotel_checkin">체크인</string>
    <string name="view_hotel_checkout">체크아웃</string>
    <string name="view_site_time_base">희망 소요 시간 : </string>
    <string name="create_plan_title">플랜 작성</string>
    <string name="txt_plan_name">플랜 이름</string>
    <string name="txt_input_plan_name">플랜 이름을 입력해주세요.</string>
    <string name="txt_input_plan_name_explain">* 플랜 이름은 중복될 수 없습니다.</string>
    <string name="txt_duplicate_plan_name">이미 같은 이름의 플랜이 있습니다.</string>
    <string name="txt_select_traveling_country">여행할 나라 선택</string>
    <string name="txt_input_arrival_time">에 도착하는 시간</string>
    <string name="txt_input_departure_time">에서 출발하는 시간</string>
    <string name="txt_select_traveling_date">날짜 선택</string>
    <string name="txt_select_traveling_time">시간 선택</string>
    <string name="txt_arrival_place">도착지</string>
    <string name="txt_departure_place">출발지</string>
    <string name="txt_select_place">장소 선택</string>
    <string name="input_check_arrival">출발지를 입력해주세요.</string>
    <string name="input_check_departure">도착지를 입력해주세요.</string>
    <string name="input_check_date">출발 날짜는 도착 날짜 이후여야 합니다.</string>
    <string name="input_check_country">여행할 나라를 입력해주세요.</string>
    <string name="txt_tour_time_explain">하루 일정의 시작 및 종료 시간을 정합니다.</string>
    <string name="txt_tour_start_time">시작 시간</string>
    <string name="txt_tour_end_time">종료 시간</string>
    <string name="txt_lodging_explain">예약한 숙박 시설이 있습니까?</string>
    <string name="txt_lodging_yes">있습니다</string>
    <string name="txt_lodging_no">없습니다</string>
    <string name="txt_lodging_multiple_selection">두 개 이상의 숙박 시설을 예약했습니다</string>
    <string name="txt_lodging_recommendation">숙박 시설 추천 기능을 이용합니다.</string>
    <string name="txt_lodging_add">예약한 숙박 시설 추가</string>
    <string name="input_check_checkin_checkout">호텔 체크인 및 체크아웃 날짜를 입력해주세요.</string>
    <string name="input_check_hotel_num">하나 이상의 호텔을 입력해주세요.</string>
    <string name="alert_delete">삭제하시겠습니까?</string>
    <string name="delete_success">삭제되었습니다.</string>
    <string name="txt_add_site">방문지 추가</string>
    <string name="title_input_site_dialog">방문지 방문 시간대 설정</string>
    <string name="title_input_spend_time_dialog">희망 소요 시간 설정</string>
    <string name="txt_spend_time">희망 소요 시간</string>
    <string name="site_dialog_positive">설정</string>
    <string name="site_dialog_negative">취소</string>
    <string name="input_check_num_of_site">최소 한 개 이상의 여행지를 입력해주세요.</string>
    <string name="input_check_spend_time">번째 여행지의 희망 소요 시간을 입력해주세요.</string>
    <string name="input_check_num_of_site_limit">여행지는 25개까지만 입력할 수 있습니다.</string>
    <string name="txt_visit_day">방문 희망 날짜</string>
    <string name="txt_visit_time">방문 희망 시간</string>
    <string name="recommend_dialog_message">추천 호텔 리스트를 가져오는 중입니다.</string>
    <string name="input_check_select_hotel">호텔을 선택해주세요.</string>
    <string name="schedule_progress_title">플랜 진행률</string>
    <string name="schedule_step_0">거리 정보를 가져오는 중입니다.</string>
    <string name="schedule_step_1">방문지를 분류 중입니다.</string>
    <string name="schedule_step_2">방문 순서를 정하는 중입니다.</string>
    <string name="schedule_step_3">이동 시간과 비용을 구하는 중입니다.</string>
    <string name="schedule_step_4">일정을 정돈하는 중입니다</string>
    <string name="free_time">자유 일정</string>
    <string name="plan_info_title"> 일정 정보</string>
    <string name="total_cost_time">총 이동 시간 : </string>
    <string name="plan_info_country">여행하는 나라 : </string>
    <string name="alert_save">플랜을 저장하시겠습니까?</string>
    <string name="save_success">플랜을 저장했습니다.</string>
    <string name="error">에러가 발생했습니다. 에러코드 : -</string>
    <string name="cannot_delete_favorite">즐겨찾기 일정은 삭제할 수 없습니다. 다른 일정을 즐겨찾기한 후 삭제해주세요.</string>
    <string name="i1">https://lh3.googleusercontent.com/BANms72X9q4bqjdwImDpdQCqNsYnt6jlVGy5UJLLuOB_kjeslmT5c6eWsXJP5wG4QY3LSh7xo4BvnHC-Uw0ZhmYQFRHAp4d5vTdWyq45xrkly-PIEcBBApjSdG82s0BKFgb91SZGKvwjx5GfXESfgJYjh3zNdTZuT0raRti_uyQCd9tOzd0Oi8jQDqfRL2WnKXrIMkbfsLSBviVc6fj2LaOu4GjbOrXI7FlrbOpUYmS3SUCeQ9iCweo4JgY-A7TbU-Yt1-jbfyF2QZOM96bmwzusRfGDmUSSu8IRBP2JVe27v-paZ9-_aBv2et3PqHTNPKN4C2t-0JYKpOHB7i3VXx2cZBh05CCatSh_vmBEpoipug1SfbRD-auBOGhtMvU0ubnFUXp9kynMkJzrYHXmxgtImUjb91LUiikzmIAzaYsdaA98-9fkoFZYiMSV5jiLJSqocaF-r5-6IV1rNIzVYDwKCupx2k8g2Lhoj9SbQTjGxuodryV8FzCNeqkSM2LcSYpgwVaHc3TUEE3R9iZlzzMSbUKN9Do87TSnRcvNWsd7oo04bD-0FNxTsCJdcZkbZt-Uo5TUfuktWPmtnzlsmisp5JP7b7jWPEju7J6FCMn9b1Qx5unB=w1920-h1280-no</string>
    <string name="i2">https://lh3.googleusercontent.com/UV89ICgWf3qdBNumOEOFxOL21HvbmN_GswAHdw9xOzrRQP6yR7xALYhJz2pvjFIq0PWfdPLc71C7bR2FR1fCPeWEFzNuAs1wvWx6uEkCjtpOVqtP_FIc--lHPaNorlgVE4gQfDfa5EfpenBXc3APWLGWL4OfXVv5PAHs7xhB7pAcCCueAYi4AKc9NPx0iarVqaF4HBFGKojFXEFzqSt_daSE2XD376ViG4IEXKwWR4XRANsWdUo8mDetsYt-JOrt84Frk3zGKLtH_LEr1RyM5XXTh6bQC8_ip_0h6IM8OpL3UvJFfkV82_lCO7-OnLEeB4tCoMykisIRqDaA4W6dl746wfrlt10qWC3SKum-Ja0bAkrNKCOA7vrTHbk6fNDLctxYAdOMM5LW4pJmKaepGGaFbZPZ4FBks1o5akaikj6n7Q66T1dGoZoGcCcWHXx3nxTo5uVqSWJhop1MoB2PcmxLPE1XYghcxgtmvog08ait0h4djHojd7O0utoWeY6STkBZX13UcYWMXAZ2rGk-RyEEeWVzGGzFkh-BgjXlQx8Q4B_4W1d7dXn1NIms1Ckcy8OCA2ftS75qRbrJCud5cokBixhO8Ns1d-cMCfzBceJWbR-nXWhD=w1920-h854-no</string>
    <string name="i3">https://lh3.googleusercontent.com/p8FrZl_b5F4aWQREGA7RCmKpYp7KCb1WnGL7huKIM4pPH-9s-iCwHERhaVubBightdgUIARzyipc8_BZMfqtTFsy0ruyPT2lXGjW2dsCRevHFw5s5_UzwyoTqxhp-q-rvFz0D5huvDFr4GKAuIXoFPIhfjtAxZSD-8-msVBAGiyGwiT7ypYEKHdjNTBrvsgXG53pfiuMgQr0URTQK9noZkDl16UwmXqoYladmKBrIQfzC5my9slPrQxmAg-wZ6iYOZoKvZymimbss3aPTXgFUAC04JhJrnkdwK3BGVV1NPZ-7J7Ic0eP2U8g4zfS1uT3kcp-yW20iCxfFQv9SN0JnAnr5fVKb6mv32KJxEUJU-pgyJJjcjVhR99_ps-FkCo6oA-f6xPxHVNS56yuUBSHETiEFP3Rd4VWWUVFbcz_ytqcD2mdbKUQ6xpN1egGrCxw1MJRRnkkZbGAw5Amrymrsqt6RAvrRAKhQzTsOKEJqvnCAA9ooQUQAmwC9pss3W8RMbN4538zD3m6xU37KaZ_JXgVGxHunbbC-fIwdVFPu_TUyHmsd0W6mMi2tuTAhRHdkB3R8-Ja_MoGjeRzJxekKfTgX8UgHqtReUGe4M40YGoXQP8ZY4Up=w1920-h1275-no</string>
    <string name="i4">https://lh3.googleusercontent.com/Qudb3YLu1_aQ77dv-Co2dkBqPAuy3MfXHNHS4N9jBZjAdCVvDk_pNSN3z2DKxFEaR87Jar7vFpv310Yqn0nRNNoi31aK0l7XAzqU1NmAItjhz35qutOo5fp-El3KjVjz5xL20dxrvc_pwVbnCkn9_smBaLNl3xL_WHd71yX8MyvIHJOnjRwF7cyGmN66QvpY2ZlixnMvzsDdlMasAofIXqSCuosDnHuRGaqekvvWggJ7bphTHNV1JOHa5mYBwwY3esjqlJ_c3sPZdtEmTZo24qJ2LFTsqpQBI8iiiHfu2uLn7DGFMwvsPEZayTy5fiYzGYo2Bf50TBj0_EYY4lHmPl0AQv99orvhmwE_fzAHIXIDdVvARASi5FlXzvmHbkVIDiFMr9-KODc0vJ6RuWD8LCxAKX8D3yqRTCCAnV_vm8DbYobIrhHf7ZfwQLsDSNrS7RMX_LfpO3yYWnnX7Lf1GvUjq6gMQ-yNG-BuHV_YKsU4oN1m_RMpAcwe--DrM_JfdaWo1SbE4RZVp8TEvy-tgmvftFtWnI-TFXHqzLLRua6_Xg-u04FpIu2xf5yQitRICJ9RCiZgZoe7fFUN620ABPZY82y-TpsZTLsfu-w8LPTKG3h-jNb_=w1280-h853-no</string>
    <string name="i5">https://lh3.googleusercontent.com/8n4aQOZP-WN3_Rd5v-yZlEWOAskz9GL2rfTkMG2OOMnZ2UE8k2E9ziYyUHgQs5f21gZxeuHmUgP3V3biX7uu4ugLfy4NxIZZv3tTWmr1wWh7_iBe3YZl7u7Q3I3CQhM6hawTxe-5ENLycQrw09rqjsa80eOrGp1JrxI5keX-rr9zXtBwWWZor1aoe5qn2wzN0OTWswNLFqyAyY5LWQSDiqJKXJ8dRnYbHRoopfKLehIq1Kv2vFy15fZTCOmGUsPy6YC40mzu-vTR4QpUpTeobOXQkmiMerS7_9qtB5JNQaTVVB-NhYoa02E-iP9luumE2Pj1nq7-dXi6JpctsdCBOkxkjjJCR1ouKsBqqG2jl2kk2mn_ctLTTK7aBZhwaVETHyziV4KASfBkAVp8tM6aQI_pvMzMk_MGDbUHyJkatxTmyKGg9-YVk6Ubsxr9-17Maymk1cruM0B7kcE1pYpglvRh9KkOYM9kQxKWchvkRAnRTl14wk_upD_DZaH5P0f4BftuGYcGKLckELIxIvSOzqD83u9ZNgtdxb-cM6F9WFQTVb2OQ-po5o41R4fex1kTuDa52odJT-njRcKlA9IkQ7MNj5wUsh23nFS-TpvWdzCJ4xYTen8P=w1920-h1080-no</string>
    <string name="i6">https://lh3.googleusercontent.com/q3wOCWN2lyJ19lmN6jPTrYM0u6xA97Qty7etCAMSKmTOOZE4JcYLuqrrrAeWo93zR7kUruFTr72j2hC3KWmhiky9e22naBUiy_rXqRUROMeMAkP8lyvViixLWvALhiYFOfcRoIOf0g2LFkq41lqI5XIy6VFel8oprB5rYqC-xUVFjiZQEHSM1v-FSNq9pmQuKNEJbWqPuJstbSg3RnmUrsUN9H-PjcOkBWutW7qpGpMapO_7rPb3NMI5hS_0QhPYzz7NyXMHGeVX5jHx-saUXU8ngGSeOkm7InYbPxMfUMHxhQw6YA2Wy86ArMie5sD2TZGPlIt6btVz-sl0vGuPefN5eqZteCpxRtuuUMZrCSktkXSwzTWhPd9EBx7hKKIPaMlEyOgTe52ZcYUFSubQ60wSmZrpKDrzlkkOZ9cylm-06oLp26W3vgmYINa1o_EMBfPxvYrgKcsKA8MFpvYODRhXv8ZPlVeZBXZtq1GCXKpeZq6n8I5kzpxnOTFF-TfkFpFAY-VaUDanhw9KMqerp2B5YnWwvLeiqVO6CQ0aYPlsSXvBgnNZvkStvjJrYDNGw4mS2K3Vv_16wKPNDm7x_VGrrJ0C8U4gcZ-8Q99FH4zCtlohzO56=w2300-h1532-no</string>
    <string name="i7">https://lh3.googleusercontent.com/dgUaPyQh_-Qwiiiz51HNXZOrV88w4Kh6Jxi7aEsGbH22SfclAXoDZ55P1w7O0jk9xRAfw1NbwJFE68wCHERuUZl7TDhotOnqr3peeQYXgfnS73dKZQKz81zEVBtsVRJOkupus12HJE03NBR5PNWPGZe5qVhUwzqypK1Ug808fdOiGOiBCR9iG4TEjDAhbWfS97tTZCOeLJ5cX9t74eUkEPHZ5vz4Nl0N4smhRS7GaK9ORw4OlGnmOeUKnnpRG5JM4DMWwDySC3mzCSnv3MFjcGKXp20HGJ2auY4UNZVPqgxHUyG6fzkV_yX_U1Fav7VnyGxuyyvdhpGXfYuSguOCCYA7F6qT5rmw-Ri-lGgCyemvVfsWBWgzi-r45RJuvndxZqazpi06e7vdlei3yae1vhDfibLDynWnmAyP-KWGxRf5h_zQ-7x-Oiumkv3JD-33CIcnOP1tSFWR5yi3fevk4msp0_YWWWFwb8cSsSM_0qKB55ppnoICR9l0YR9pfVHaaen4mpznbc7vlP0fc8Gi9hrnxrVi9bSCj-YGa2dzJ-jojraDLiteMK029AAn5zO3VcvXnjBlIqBqrhiJI_FErJfYTptsNHHzwHhO8okD0q2HGv_4L5Gk=w2300-h1532-no</string>
    <string name="i8">https://lh3.googleusercontent.com/1P__k9F_sHaXd5ja5f9j4mn-kQbnnYZHNANceOpataSaRY9rQuBEM_qc9VpQldEiYZs_f5ipRdT66R1Ge-bcc4pUB62wwo0enCEHkg77vO-Um-MaU2n5B1acUF5_qb10vaMdQlwQFrJIxuYHV-Wv7EMcJtwmr6xyutMpra1r1tbEWMggXtucMCEm05KzB7DcLPYh7YNt-UoM_Y3Hg2vL2fHugq7J2Bg0mcXgkqbSjPjUgVQtvt9jJ05jYfkL0xSpyfOEfLP6AX2pg1vQZQXPNShSroN_Hgm5EHb-szVwI8Q9iSNIU_qlfx7IQRs984kj41m7xKLWfx0Tm1Vd5sYk8N97XyMAfSjqtPtU9B36QZjJJ-nueh6VtWQdfiNWRq7aS50K1UnR9x38tp7qDejLQCQB9lCKyxXlXo4kMHgs5exYXsVruo9nNxPlxyH9UA2bvtn7JjzXZlqscJY10jqRA8uEO3S0GDMxxk6YWxWluvT6uJHXzOoRRiXwbdwuwWa-Pa0Fq3XXDlvLIM4zDOmPU6L7O0fAOiMuPPq9sP_V4owSXXuFLnfrHi2KaHUQbyfjWh0r8xp1SLczdhywOmozqXsC5wQd7zN0x-Oa_3lvLskE6H3iCCGm=w2296-h1532-no</string>
    <string name="i9">https://lh3.googleusercontent.com/veL-R87dKbpNryjULeZw3JGOSBftYiZ7T6dmVFO8KwmIjRJXUO0v2L4tPuGAmn_P55MjwtcZoWSaXk0rOrhKbGS7HaZD6su3oi8pobkBEbSpDTU_ZVwbGpY8ZcMqOlQbkSF6tSEU-IYJ6_71-REZZRWZhEUC7C6SE84_eYc-obNfMuHiv2cFJh0yrgwoyxolQVMRK3yC66AI9leSwil_ktNQaUVCOYTvFbqyAFKLXJ4Pqe4hVObc8zBwdc64Ym4tOC0Pa8S5U61cLnAxG3akoqzQKOBZPB9QQgEBed88-YFo_y5mzfB796DDJeJJxm-uV-xyUzn54BjohlUCOC8RZFqUEJh5KtgNT-nkOxMOpKhkRehstBML6-PFLG4vWh1uNQIcl0L88LmB4iqxkwir6F3Y3ZvB-wfALBWrkvAdnvQfD8lMwFCvPO9fZFy7cI0Lur7lIzut4KIsjvH-QZBq-BbQnHT-B0IOoVzaBkSp8qeZnAZZCdCW7KgKmBSClyHxaH1NdyPB649jqfK8ELj5T6-FpXOil8sretxqq77legmZDIFQF4P5zgNbswDAIm4MZPCrUzA-SVPB-uexET7St4-LgebDYGcOuKY0cWkKBNOiNekqwoz1=w2298-h1532-no</string>
</resources>