<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/plan_screen_input_title"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="23dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@color/colorFontDark"
            android:text="@string/txt_plan_name"
            android:layout_marginRight="23dp"
            android:id="@+id/plan_txt_plan_name"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@color/colorFontDark"
            android:textColorHint="@color/colorFontGrey"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:hint="@string/txt_input_plan_name"
            android:id="@+id/plan_txt_input_plan_name"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:textColor="@color/colorFontGrey"
        android:textSize="14sp"
        android:text="@string/txt_input_plan_name_explain"
        android:id="@+id/plan_txt_plan_name_explain"
        />


</LinearLayout>