<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <android.support.v7.widget.Toolbar
        android:layout_height="56dp"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:gravity = "center_vertical"
        android:elevation="1dp"
        android:id="@+id/create_plan_toolbar"
        android:layout_alignParentTop="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/create_plan_title"
            android:layout_marginLeft="23dp"
            android:layout_centerVertical="true"
            android:textSize="22sp"
            android:textColor="@color/colorWhite"
            android:text="@string/plan_detail_title"
            android:textStyle="bold"
            />

    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorBackgroundGrey"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:paddingLeft="10dp"
                android:text="@string/plan_info_title"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:background="@color/colorPrimary"
                android:id="@+id/plan_info"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plan_info_country"
                    android:textSize="15sp"
                    android:textColor="@color/colorFontGrey"
                    android:id="@+id/plan_info_country"
                    android:layout_marginBottom="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_cost_time"
                    android:textSize="15sp"
                    android:textColor="@color/colorFontGrey"
                    android:id="@+id/plan_info_cost_time"
                    />

            </LinearLayout>
        </LinearLayout>
        <android.support.design.widget.TabLayout
            android:id="@+id/plan_tabs"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            app:tabTextColor="@color/colorFontLightGrey"
            app:tabSelectedTextColor="@color/colorFont"
            ></android.support.design.widget.TabLayout>
        <android.support.v4.view.ViewPager
            android:id="@+id/plan_pager"
            android:layout_below="@+id/plan_tabs"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            >
        </android.support.v4.view.ViewPager>
    </LinearLayout>
</LinearLayout>