<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:padding="23dp"
    android:orientation="vertical"
    >
    <!--upperPart-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >
        <!--explanation about lodging-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorFontDark"
            android:textStyle="bold"
            android:text="@string/txt_lodging_explain"
            android:textSize="17sp"
            android:layout_marginBottom="20dp"
            android:id="@+id/hotel_info_lodging_explain"/>
        <!--checkbox-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingLeft="23dp"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="@string/txt_lodging_yes"
                    android:layout_marginRight="20dp"
                    android:textSize="17sp"
                    android:textColor="@color/checkbox_font"
                    android:textStyle="bold"
                    android:id="@+id/hotel_info_txt_lodging_yes"
                    android:textIsSelectable="true"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    />
                <CheckBox
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:button="@null"
                    android:background="@drawable/checkbox"
                    android:backgroundTint="@color/colorAccent"
                    android:backgroundTintMode="src_in"
                    android:id="@+id/hotel_info_check_yes"
                    android:checked="false" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="@string/txt_lodging_no"
                    android:layout_marginRight="20dp"
                    android:textSize="17sp"
                    android:textColor="@color/checkbox_font"
                    android:textStyle="bold"
                    android:id="@+id/hotel_info_txt_lodging_no"
                    android:textIsSelectable="true"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    />
                <CheckBox
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:button="@null"
                    android:background="@drawable/checkbox"
                    android:backgroundTint="@color/colorAccent"
                    android:backgroundTintMode="src_in"
                    android:id="@+id/hotel_info_check_no"
                    />
            </LinearLayout>
        </LinearLayout>
        <!--supportive explanation-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="17sp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textColor="@color/colorFontGrey"
                android:text="@string/txt_lodging_recommendation"
                android:id="@+id/hotel_info_txt_lodging_plus"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:gravity="center"
            android:background="@drawable/selectable_textview_background"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/selectable_textview_font"
            android:text="@string/txt_lodging_add"
            android:textIsSelectable="true"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:id="@+id/hotel_info_add_lodging" />
    </LinearLayout>

    <!--list of hotel list-->
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:id="@+id/hotel_info_selected_hotels"
        ></android.support.v7.widget.RecyclerView>
    <Space
        android:layout_width="match_parent"
        android:layout_height="81dp" />

</LinearLayout>